Se modificó el vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -31,6 +31,13 @@
         "destination": "./js/sb-admin-2.min.js"
  
       }
-    ]
+    ],
+    "redirects": [
+    {
+      "source": "/index.html",
+      "destination": "/charts.html",
+      "permanent": true
+    }
+  ]
   }
   
