Se modificó el vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -34,7 +34,7 @@
     ],
     "redirects": [
     {
-      "source": "/index.html",
+      "source": "/charts.html",
       "destination": "/charts.html",
       "permanent": true
     }
