--- a/vercel.json
+++ b/vercel.json
@@ -30,14 +30,12 @@
         "source": "/js/sb-admin-2.min.js",
         "destination": "./js/sb-admin-2.min.js"
  
+      },
+      {
+        "source": "/charts.html",
+        "destination": "/charts.html"
       }
-    ],
-    "redirects": [
-    {
-      "source": "/charts.html",
-      "destination": "/charts.html",
-      "permanent": true
-    }
-  ]
+
+    ]
   }
   
