Cambio en vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -36,6 +36,16 @@
         "destination": "/charts.html"
       }
 
+    ],
+    "version":2,
+    "builds": [
+      { "src": "*.js", "use": "@vercel/node" }
+    ],
+    "routes": [
+        {
+          "src": "/(.*)",
+          "dest": "/"
+        }
     ]
   }
   
