--- a/vercel.json
+++ b/vercel.json
@@ -37,15 +37,12 @@
       }
 
     ],
-    "version":2,
-    "builds": [
-      { "src": "*.js", "use": "@vercel/node" }
-    ],
-    "routes": [
-        {
-          "src": "/(.*)",
-          "dest": "/"
-        }
-    ]
+    "redirects": [
+    {
+      "source": "/charts.html",
+      "destination": "/charts.html",
+      "permanent": false
+    }
+  ]
   }
   
